[package]
name = "chess-project"
version = "0.1.0"
edition = "2024"

[dependencies]
strum = "0.27.1"
strum_macros = "0.27.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

futures = "0.3.31"
ratatui = "0.29.0"
tokio = { version = "1.40.0", features = ["full"] }
color-eyre = "0.6.3"
crossterm = { version = "0.28.1", features = ["event-stream"] }
